review of documentation and meta files

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
-		   Useless Containers Library
-		   ==========================
+		       Useless Containers Library
+		       ==========================
 
 
 Topics
@@ -8,7 +8,7 @@ Topics
 
    1. Overview
    2. License
-   3. Make and install
+   3. Install
    4. Usage
    A. Credits
    B. Bug reports
@@ -18,16 +18,15 @@ Topics
 1. Overview
 -----------
 
-The  Useless Containers  Library  (UCL) is  an implementation  of
-generic data type containers  for the C language.  The containers
-are:
+The Useless  Containers Library  (UCL) is  an implementation  of generic
+data type containers for the C language.  The containers are:
 
 * list, double-linked list;
 
 * circular, a circular double-linked list;
 
-* vector, an array with  arrangements that allow the minimisation
-  of memory reallocations;
+* vector,  an array  with arrangements  that allow  the minimisation  of
+  memory reallocations;
 
 * map, an AVL tree used to implement an associative container;
 
@@ -37,9 +36,9 @@ are:
 
 * graph, one day it will be implemented.
 
-  The library is developed and tested under the Linux+GNU system,
-requires  the GNU  C library  and compiles  fine with  the  GNU C
-compiler ("-std=c99 -pedantic" switches).
+  The  library  is developed  and  tested  under the  GNU+Linux  system,
+requires the  GNU C library  and compiles fine  with the GNU  C compiler
+("-std=c99 -pedantic" switches).
 
 
 2 License
@@ -50,27 +49,26 @@ Copyright (c) 2001-2010, 2013 Marco Maggi
 Copyright (C)  1991, 1992, 1996,  1997, 1999, 2004  Free Software
 Foundation, Inc.
 
-This  program is free  software: you  can redistribute  it and/or
-modify it  under the terms of  the GNU General  Public License as
-published by  the Free Software  Foundation, either version  3 of
-the License, or (at your option) any later version.
+This program is free software: you  can redistribute it and/or modify it
+under the  terms of the GNU  General Public License as  published by the
+Free Software Foundation,  either version 3 of the License,  or (at your
+option) any later version.
 
-This program is  distributed in the hope that  it will be useful,
-but WITHOUT  ANY WARRANTY; without  even the implied  warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+This program  is distributed  in the  hope that it  will be  useful, but
+WITHOUT   ANY   WARRANTY;  without   even   the   implied  warranty   of
+MERCHANTABILITY  or  FITNESS FOR  A  PARTICULAR  PURPOSE.  See  the  GNU
 General Public License for more details.
 
-You should have received a copy of the GNU General Public License
-along      with     this      program.       If     not,      see
-<http://www.gnu.org/licenses/>.
+You should have received a copy  of the GNU General Public License along
+with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
-3. Make and install
--------------------
+3. Install
+----------
 
 To install from a proper release tarball, do this:
 
-    $ cd ucl-2.0d0
+    $ cd ucl-0.1.0
     $ mkdir build
     $ cd build
     $ ../configure
@@ -82,35 +80,49 @@ to inspect the available configuration options:
 
     $ ../configure --help
 
-  From a repository checkout or  snapshot (the ones from the
-Github site): we  may need to manually  run "libtoolize" the
-first time, then  we must first run  the script "autogen.sh"
-from the top source directory, to generate the needed files:
+  The Makefile is designed to allow parallel builds, so we can do:
 
-    $ sh autogen.sh
+   $ make -j4 all && make -j4 check
 
-for  this  we need  to  have  installed the  GNU  Autotools:
-Automake, Autoconf, Libtool.  After this:
+which,  on  a  4-core  CPU,   should  speed  up  building  and  checking
+significantly.
 
-    $ ../configure --enable-maintainer-mode [options]
-    $ make
-    $ make check
-    $ make install
-
-  The Makefile supports  the DESTDIR environment variable to
-install files in a  temporary location, example: to see what
-will happen:
+  The  Makefile supports  the  DESTDIR environment  variable to  install
+files in a temporary location, example: to see what will happen:
 
     $ make -n install DESTDIR=/tmp/ucl
 
 to really do it:
 
-    $ make install DESTDIR=/tmp/template
+    $ make install DESTDIR=/tmp/ucl
 
-  After  the  installation  it  is possible  to  verify  the
-installed library against the test suite with:
+  After the installation it is  possible to verify the installed library
+against the test suite with:
 
     $ make installcheck
+
+  From  a repository  checkout or  snapshot  (the ones  from the  Github
+site): we  must install the  GNU Autotools (GNU Automake,  GNU Autoconf,
+GNU Libtool),  then we must first  run the script "autogen.sh"  from the
+top source directory, to generate the needed files:
+
+    $ cd ucl
+    $ sh autogen.sh
+
+notice  that  "autogen.sh"  will   run  the  programs  "autoreconf"  and
+"libtoolize"; the  latter is  selected through the  environment variable
+"LIBTOOLIZE",  whose  value  can  be  customised;  for  example  to  run
+"glibtoolize" rather than "libtoolize" we do:
+
+   $ LIBTOOLIZE=glibtoolize sh autogen.sh
+
+  After this the  procedure is the same  as the one for  building from a
+proper release tarball, but we have to enable maintainer mode:
+
+    $ ../configure --enable-maintainer-mode [options]
+    $ make
+    $ make check
+    $ make install
 
 
 4. Usage
@@ -122,50 +134,48 @@ Read the documentation in Texinfo format.
 A. Credits
 ----------
 
-The stuff  was written  by Marco Maggi.   If this  package exists
-it's because of the great GNU software tools that he uses all the
-time.
+The  stuff was  written by  Marco Maggi.   If this  package exists  it's
+because of the great GNU software tools that he uses all the time.
 
-  The  last  portion of  "src/ucl.c"  is  a  modified version  of
-"stdlib/qsort.c"  from  the GNU  C  Library  version  2.4; it  is
-Copyright (C)  1991, 1992, 1996,  1997, 1999, 2004  Free Software
-Foundation, Inc.
+  The   last  portion   of  "src/ucl.c"   is  a   modified  version   of
+"stdlib/qsort.c" from the GNU C Library version 2.4; it is Copyright (C)
+1991, 1992, 1996, 1997, 1999, 2004 Free Software Foundation, Inc.
 
 
 B. Bug reports
 --------------
 
-A bug  in UCL  is my  fault only.   Bug reports  are appreciated,
-register them with the issue tracker at the Github site.
+A bug  in UCL is my  fault only.  Bug reports  are appreciated, register
+them with the issue tracker at the Github site.
 
 
 C. Resources
 ------------
 
-The latest  version of this  package can be  downloaded from
-Github:
+The latest release of this package can be downloaded from:
 
-	<http://sourceforge.net/projects/uconlib/files/>
+	    <https://bitbucket.org/marcomaggi/ucl/downloads>
 
 development takes place at:
 
-	       <http://github.com/marcomaggi/ucl/>
+		  <http://github.com/marcomaggi/ucl/>
 
 and as backup at:
 
-	   <http://sourceforge.net/projects/uconlib/>
+		<https://bitbucket.org/marcomaggi/ucl/>
 
 the documentation is available online:
 
-	  <http://marcomaggi.github.com/docs/ucl.html>
+	      <http://marcomaggi.github.io/docs/ucl.html>
 
 the GNU Project software can be found here:
 
-		   <http://www.gnu.org/>
+			 <http://www.gnu.org/>
 
 
 ### end of file
 # Local Variables:
+# coding: utf-8-unix
 # mode: text
-# fill-column: 65
+# fill-column: 72
 # End:
