changed license from gpl to lgpl

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ Notes for revision 3.0.0-devel.0
 
 * Package infrastructure development.
 
+* Changed license from GPL to LGPL.
+
 
 Notes for revision 2.0d2
 ------------------------
