--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+-*- coding: utf-8-unix -*-
 
 		       Useless Containers Library
 		       ==========================
@@ -6,17 +7,18 @@
 Topics
 ------
 
-   1. Overview
-   2. License
-   3. Install
-   4. Usage
-   A. Credits
-   B. Bug reports
-   C. Resources
+  1. Introduction
+  2. License
+  3. Install
+  4. Usage
+  A. Credits
+  B. Bugs, vulnerabilities and contributions
+  C. Resources
+  D. Badges and static analysis
 
 
-1. Overview
------------
+1. Introduction
+---------------
 
 The Useless  Containers Library  (UCL) is  an implementation  of generic
 data type containers for the C language.  The containers are:
@@ -36,31 +38,35 @@ data type containers for the C language.  The containers are:
 
 * graph, one day it will be implemented.
 
-  The  library  is developed  and  tested  under the  GNU+Linux  system,
-requires the  GNU C library  and compiles fine  with the GNU  C compiler
-("-std=c99 -pedantic" switches).
+  The  library  targets POSIX  systems.   This  package depends  on  the
+packages:  CCExceptions,  at least  version  0.8.0;  CCMemory, at  least
+version  0.2.1; CCStructs,  at least  version  0.2.0.  To  run the  test
+suite: this package  depends upon the package CCTests,  at least version
+0.3.0.
 
+  The package uses the GNU Autotools  and it is tested, using Travis CI,
+on both Ubuntu  GNU+Linux systems and OS X systems.   The package relies
+on "pkg-config" to find the dependencies installed on the system.
 
-2 License
----------
+2. License
+----------
 
-Copyright (c) 2001-2010, 2013 Marco Maggi
+Copyright (c) 2001-2010, 2013, 2019 Marco Maggi
 <marco.maggi-ipsu@poste.it>
-Copyright (C)  1991, 1992, 1996,  1997, 1999, 2004  Free Software
-Foundation, Inc.
 
 This program is free software: you  can redistribute it and/or modify it
-under the  terms of the GNU  General Public License as  published by the
-Free Software Foundation,  either version 3 of the License,  or (at your
-option) any later version.
+under the terms of the GNU Lesser General Public License as published by
+the Free  Software Foundation, either version  3 of the License,  or (at
+your option) any later version.
 
-This program  is distributed  in the  hope that it  will be  useful, but
+  This program  is distributed in the  hope that it will  be useful, but
 WITHOUT   ANY   WARRANTY;  without   even   the   implied  warranty   of
-MERCHANTABILITY  or  FITNESS FOR  A  PARTICULAR  PURPOSE.  See  the  GNU
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser
 General Public License for more details.
 
-You should have received a copy  of the GNU General Public License along
-with this program.  If not, see <http://www.gnu.org/licenses/>.
+  You  should have  received a  copy of  the GNU  Lesser General  Public
+License     along     with     this    program.      If     not,     see
+<http://www.gnu.org/licenses/>.
 
 
 3. Install
@@ -101,7 +107,7 @@ against the test suite with:
 
     $ make installcheck
 
-  From  a repository  checkout or  snapshot  (the ones  from the  Github
+  From  a repository  checkout or  snapshot  (the ones  from the  GitHub
 site): we  must install the  GNU Autotools (GNU Automake,  GNU Autoconf,
 GNU Libtool),  then we must first  run the script "autogen.sh"  from the
 top source directory, to generate the needed files:
@@ -128,7 +134,12 @@ proper release tarball, but we have to enable maintainer mode:
 4. Usage
 --------
 
-Read the documentation in Texinfo format.
+Read the documentation generated from  the Texinfo sources.  The package
+installs the documentation  in Info format; we can  generate and install
+documentation in HTML format by running:
+
+   $ make html
+   $ make install-html
 
 
 A. Credits
@@ -137,16 +148,14 @@ A. Credits
 The  stuff was  written by  Marco Maggi.   If this  package exists  it's
 because of the great GNU software tools that he uses all the time.
 
-  The   last  portion   of  "src/ucl.c"   is  a   modified  version   of
-"stdlib/qsort.c" from the GNU C Library version 2.4; it is Copyright (C)
-1991, 1992, 1996, 1997, 1999, 2004 Free Software Foundation, Inc.
 
+B. Bugs, vulnerabilities and contributions
+------------------------------------------
 
-B. Bug reports
---------------
-
-A bug  in UCL is my  fault only.  Bug reports  are appreciated, register
-them with the issue tracker at the Github site.
+Bug  and vulnerability  reports are  appreciated, all  the vulnerability
+reports  are  public; register  them  using  the  Issue Tracker  at  the
+project's GitHub  site.  For  contributions and  patches please  use the
+Pull Requests feature at the project's GitHub site.
 
 
 C. Resources
@@ -154,28 +163,97 @@ C. Resources
 
 The latest release of this package can be downloaded from:
 
-	    <https://bitbucket.org/marcomaggi/ucl/downloads>
+	<https://bitbucket.org/marcomaggi/ucl/downloads>
 
 development takes place at:
 
-		  <http://github.com/marcomaggi/ucl/>
+	      <https://github.com/marcomaggi/ucl/>
 
 and as backup at:
 
-		<https://bitbucket.org/marcomaggi/ucl/>
+	     <https://bitbucket.org/marcomaggi/ucl/>
 
 the documentation is available online:
 
-	      <http://marcomaggi.github.io/docs/ucl.html>
+	  <https://marcomaggi.github.io/docs/ucl.html>
 
 the GNU Project software can be found here:
 
-			 <http://www.gnu.org/>
+			 <https://www.gnu.org/>
+
+the package CCExceptions is available at:
+
+	     <https://github.com/marcomaggi/ccexceptions/>
+
+the package CCMemory is available at:
+
+	     <https://github.com/marcomaggi/ccmemory/>
+
+the package CCStructs is available at:
+
+	     <https://github.com/marcomaggi/ccstructs/>
+
+the package CCTests is available at:
+
+		<https://github.com/marcomaggi/cctests/>
+
+
+D. Badges and static analysis
+-----------------------------
+
+D.1 Travis CI
+-------------
+
+Travis CI is  a hosted, distributed continuous  integration service used
+to build and test software projects  hosted at GitHub.  We can find this
+project's dashboard at:
+
+	     <https://travis-ci.org/marcomaggi/ucl>
+
+  Usage of this service is configured through the file ".travis.yml" and
+the scripts under the directory "meta/travis-ci".
+
+
+D.2 Clang's Static Analyzer
+---------------------------
+
+The Clang Static Analyzer is a source code analysis tool that finds bugs
+in C, C++, and Objective-C programs.  It is distributed along with Clang
+and we can find it at:
+
+		   <http://clang-analyzer.llvm.org/>
+
+  Usage of this service is implemented with make rules; see the relevant
+section in the file "Makefile.am".
+
+
+D.3 Codecov
+-----------
+
+Codecov is a service providing code  coverage reports.  We can find this
+project's dashboard at:
+
+	     <https://codecov.io/gh/marcomaggi/ucl>
+
+Usage of  this service is  implemented through direct  interface between
+GitHub and Codecov  sites; it configured through  the file `codecov.yml`
+and appropriate entries in Travis CI's matrix of builds.
+
+
+D.4 Codacy
+----------
+
+Codacy is  an online service  providing code  review.  We can  find this
+project's dashboard at:
+
+	   <https://www.codacy.com/app/marcomaggi/ucl>
+
+Usage of this service is  implemented through direct integration between
+GitHub and Codacy sites.
 
 
 ### end of file
 # Local Variables:
-# coding: utf-8-unix
 # mode: text
 # fill-column: 72
 # End:
