--- a/doc/ucl.texi
+++ b/doc/ucl.texi
@@ -65,11 +65,10 @@
 @c ------------------------------------------------------------
 
 @copying
-This document describes version @value{VERSION} of @value{PACKAGE}, a C
-language library implementing a set of containers.
+This document describes version @value{VERSION} of @value{PACKAGE}, a C11 language library
+implementing a set of containers.
 
-The package is distributed under the terms of the @gnu{} General Public
-License (@gpl{}).
+The package is distributed under the terms of the @gnu{} Lesser General Public License (@lgpl{}).
 
 The latest release can be downloaded from:
 
@@ -89,13 +88,11 @@ and as backup at:
 Copyright @copyright{} @value{COPYRIGHT_YEARS} by @value{AUTHOR} @value{AUTHOR_EMAIL}
 
 @quotation
-Permission is granted to copy, distribute and/or modify this document
-under the terms of the @gnu{} Free Documentation License, Version 1.3 or
-any later version published by the Free Software Foundation; with
-Invariant Sections being ``@gnu{} Free Documentation License'' and
-``@gnu{} General Public License'', no Front--Cover Texts, and no
-Back--Cover Texts.  A copy of the license is included in the section
-entitled ``@gnu{} Free Documentation License''.
+Permission is granted to copy, distribute and/or modify this document under the terms of the @gnu{}
+Free Documentation License, Version 1.3 or any later version published by the Free Software
+Foundation; with Invariant Sections being ``@gnu{} Free Documentation License'' and ``@gnu{} Lesser
+General Public License'', no Front--Cover Texts, and no Back--Cover Texts.  A copy of the license is
+included in the section entitled ``@gnu{} Free Documentation License''.
 @end quotation
 @end copying
 
@@ -148,7 +145,7 @@ entitled ``@gnu{} Free Documentation License''.
 
 Appendices
 
-* Package License::             GNU General Public License.
+* Package License::             GNU Lesser General Public License.
 * Documentation License::       GNU Free Documentation License.
 * references::                  Bibliography and references.
 * concept index::               An entry for each concept.
@@ -169,6 +166,8 @@ provided to handle collected data, but no container can be used without
 wrapping it in a module whose functions ``know'' how to deal with the
 type of collected data.
 
+@cindex @file{ucl.h}, header file
+@cindex Header file @file{ucl.h}
 @value{PACKAGE} installs the single header file @file{ucl.h}.  All the
 function names in the @api{} are prefixed with @code{ucl_}; all the
 constant names are prefixed with @code{UCL_}; all the type names are
@@ -7423,7 +7422,7 @@ C Library version 2.4, modified to use @var{compar}.
 @c Appendices.
 @c ------------------------------------------------------------
 
-@include gpl-3.0.texi
+@include lgpl-3.0.texi
 @include fdl-1.3.texi
 
 @c page
